  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.28 2008/11/13 10:02:32 stream Exp $
==========================================================================

2.9100
------

2-9102-508  new: x86: OGR-NG mmx core

2.9101-507  new: all: Added OGR-NG contest 
            chg: x86: RC5-72 core selection (#4072)
            fix: x86: AMD CPU identification (#4073 and others)
            fix: amd64: Fix bug preventing core pre-selection
            imp: amd64: Fix issue preventing multi-processor client
            chg: x86: GO2a core selected as default for P2
            imp: ppc: Recognize PPC5200 (603e based SoC chip)
            imp: amigaos: Use timezone prefs for DST detection on OS4
            imp: ppc: Recognize PPC405 and PPC440 CPU variants


2.9000
------
2.9016-506  new: x86: added new RC5-72 core (GO 2-pipe alt), selected for
                      P4 and Core Duo CPUs.
            fix: cellbe: Memory corruption on heavy background activity
                         when system is low on memory.
            fix: cellbe: Workaround for broken SPU scheduler (#4038).
            fix: all: Block lost if '-n 1' used on multi-cpu system (#4018).

2.9015-505  fix: cellbe: Memory corruption in OGR core (#4036)
            imp: x86: CPU Identification
            imp: macosx: Add support for Intel temperature sensors

2.9015-504  imp: cellbe: Tidy up cores for public source release
            fix: x86: broken -stress on intel macosx (#4021)

2.9015-503  imp: cellbe: Slightly faster SPE OGR core
            fix: linux: Working fix for the race condition alluded to in the
                        changelog for v2.9015-502